Adapt old examples to new reproducer pipeline. Adapt reproducer to old examples.